fix(nav) rework menu button on mobile

--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_header.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_header.scss
@@ -118,8 +118,13 @@
   }
 
   .banner .navbar-toggler {
-    border: 1px solid #333;
-    color: #333;
+    border: none;
+    color: #c33;
+  }
+
+  .banner .navbar-toggler:focus,
+  .banner .navbar-toggler:active {
+    outline: none;
   }
 
   .banner .header-top .language-selector {
